--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,4 +6,8 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
+    <style name="CustomActionBarTheme" parent="@style/Theme.AppCompat.Light">
+	    <item name="android:actionBarSize">44dp</item>
+        <item name="actionBarSize">44dp</item>
+    </style>
 </resources>
